@@ -17,6 +17,8 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+common/utils.c: Fix random_roll() and die_roll() to not return out of range
+  values.
 include/define.h: Add parentheses around arguments of FABS macro.
 Andreas Kirschbaum 2004-09-19
 
